force-app/main/default/objects/SAC_Alerta__c/SAC_Alerta__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar registros de alertas que vienen parametrizadas por custom metadata types (Maestro de tipologías de alertas)</description>
    <label>Alerta</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Alerta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alertas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>