force-app/main/default/objects/SAC_Alerta__c/fields/SAC_Accion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Accion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Acción a la que pertenece la alerta</description>
    <label>Acción</label>
    <referenceTo>SAC_Accion__c</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>Alertas</relationshipName>
    <type>Lookup</type>
</CustomField>