force-app/main/default/objects/SAC_Alerta__c/fields/SAC_EsMiGrupoLetrado__c.field-meta.xml
<CustomField>
    <fullName>SAC_EsMiGrupoLetrado__c</fullName>
    <formula>IF(ISBLANK(SAC_GrupoPropietarioPretensionId__c) , false, CONTAINS($User.SAC_GruposPerteneciente__c, SAC_GrupoPropietarioPretensionId__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es mi grupo letrado</label>
    <type>Checkbox</type>
</CustomField>