force-app/main/default/objects/SAC_Alerta__c/fields/SAC_EsMiGrupoProveedor__c.field-meta.xml
<CustomField>
    <fullName>SAC_EsMiGrupoProveedor__c</fullName>
    <formula>IF(ISBLANK(SAC_GrupoPropietarioReclamacionId__c) , false, CONTAINS($User.SAC_GruposPerteneciente__c, SAC_GrupoPropietarioReclamacionId__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es mi grupo proveedor</label>
    <type>Checkbox</type>
</CustomField>