force-app/main/default/objects/SAC_Alerta__c/fields/SAC_FechaLectura__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaLectura__c</fullName>
    <description>Indica la fecha en la que se ha leído la alerta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de lectura</label>
    <type>DateTime</type>
</CustomField>