force-app/main/default/objects/SAC_Alerta__c/fields/SAC_Grupo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Grupo__c</fullName>
    <description>Campo para almacenar la queue a la que puede pertenecer la reclamación padre (ej: pdte.asignar)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Grupo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>