force-app/main/default/objects/SAC_Alerta__c/fields/SAC_GrupoColaborador__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoColaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo Colaborador</label>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>Alertas</relationshipName>
    <type>Lookup</type>
</CustomField>