force-app/main/default/objects/SAC_Alerta__c/fields/SAC_GrupoPropietarioInteraccion__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoPropietarioInteraccion__c</fullName>
    <description>Grupo propietario de la interacción a la que pertenece la alerta</description>
    <formula>SAC_Interaccion__r.SAC_GrupoColaborador__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo propietario de la interacción</label>
    <type>Text</type>
</CustomField>