force-app/main/default/objects/SAC_Alerta__c/fields/SAC_GrupoPropietarioInteraccionId__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoPropietarioInteraccionId__c</fullName>
    <formula>SAC_Interaccion__r.SAC_GrupoColaborador__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo propietario de la interacción Id</label>
    <type>Text</type>
</CustomField>