force-app/main/default/objects/SAC_Alerta__c/fields/SAC_GrupoPropietarioReclamacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoPropietarioReclamacion__c</fullName>
    <description>Grupo propietario de la reclamación</description>
    <formula>SAC_Reclamacion__r.SEG_Grupo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo propietario de la reclamación</label>
    <type>Text</type>
</CustomField>