force-app/main/default/objects/SAC_Alerta__c/fields/SAC_GrupoPropietarioReclamacionId__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoPropietarioReclamacionId__c</fullName>
    <formula>SAC_Reclamacion__r.SEG_Grupo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo propietario de la reclamación Id</label>
    <type>Text</type>
</CustomField>