force-app/main/default/objects/SAC_Alerta__c/fields/SAC_GrupoPropietarioTarea__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoPropietarioTarea__c</fullName>
    <description>Grupo responsable de la tarea a la que pertenece la alerta</description>
    <formula>SAC_Accion__r.SAC_EquipoResponsable__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo propietario de la tarea</label>
    <type>Text</type>
</CustomField>