force-app/main/default/objects/SAC_Alerta__c/fields/SAC_GrupoPropietarioTareaId__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoPropietarioTareaId__c</fullName>
    <formula>SAC_Accion__r.SAC_EquipoResponsable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo propietario de la tarea Id</label>
    <type>Text</type>
</CustomField>