force-app/main/default/objects/SAC_Alerta__c/fields/SAC_Interaccion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Interaccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interacción a la que pertenece la alerta</description>
    <label>Interacción</label>
    <referenceTo>SAC_Interaccion__c</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>Alertas</relationshipName>
    <type>Lookup</type>
</CustomField>