force-app/main/default/objects/SAC_Alerta__c/fields/SAC_LeidoPorNombre__c.field-meta.xml
<CustomField>
    <fullName>SAC_LeidoPorNombre__c</fullName>
    <formula>SAC_UsuarioLector__r.FirstName + &apos; &apos; +   SAC_UsuarioLector__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leído por</label>
    <type>Text</type>
</CustomField>