force-app/main/default/objects/SAC_Alerta__c/fields/SAC_MensajeAlerta__c.field-meta.xml
<CustomField>
    <fullName>SAC_MensajeAlerta__c</fullName>
    <description>Mensaje que contiene la alerta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mensaje de alerta</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>