force-app/main/default/objects/SAC_Alerta__c/fields/SAC_Pretension__c.field-meta.xml
<CustomField>
    <fullName>SAC_Pretension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pretensión a la que pertenece la alerta</description>
    <label>Pretensión</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Alertas (Pretensión)</relationshipLabel>
    <relationshipName>AlertasPretension</relationshipName>
    <type>Lookup</type>
</CustomField>