force-app/main/default/objects/SAC_Alerta__c/fields/SAC_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Reclamacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reclamación a la que esta vinculada la alerta</description>
    <label>Reclamación</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>Alertas</relationshipName>
    <type>Lookup</type>
</CustomField>