force-app/main/default/objects/SAC_Alerta__c/fields/SAC_Tipo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Tipo__c</fullName>
    <description>Almacena el tipo de alerta recuperado del maestro</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>