force-app/main/default/objects/SAC_Alerta__c/fields/SAC_Usuario__c.field-meta.xml
<CustomField>
    <fullName>SAC_Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario al que va destinada la alerta</description>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alertas</relationshipName>
    <type>Lookup</type>
</CustomField>