force-app/main/default/objects/SAC_Alerta__c/fields/SAC_UsuarioLector__c.field-meta.xml
<CustomField>
    <fullName>SAC_UsuarioLector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica el usuario que ha leído la alerta informando el check Leído</description>
    <label>Leído por</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alertas1</relationshipName>
    <type>Lookup</type>
</CustomField>