force-app/main/default/objects/SAC_Alerta__c/recordTypes/SAC_Alerta.recordType-meta.xml
<RecordType>
    <fullName>SAC_Alerta</fullName>
    <active>true</active>
    <description>RecordType para las alertas de SAC</description>
    <label>Alerta SAC</label>
</RecordType>