force-app/main/default/objects/SAC_Alerta__c/recordTypes/SPV_Alerta.recordType-meta.xml
<RecordType>
    <fullName>SPV_Alerta</fullName>
    <active>true</active>
    <description>Alertas de supervisores</description>
    <label>Alerta SPV</label>
</RecordType>