force-app/main/default/objects/SAC_Alerta__c/listViews/SAC_Alertas.listView-meta.xml
<ListView>
    <fullName>SAC_Alertas</fullName>
    <columns>CREATED_DATE</columns>
    <columns>SAC_Reclamacion__c</columns>
    <columns>NAME</columns>
    <columns>SAC_Leido__c</columns>
    <columns>SAC_FechaLectura__c</columns>
    <columns>SAC_UsuarioLector__c</columns>
    <filterScope>Everything</filterScope>
    <label>SAC-Alertas</label>
    <sharedTo>
        <role>SAC_General</role>
    </sharedTo>
</ListView>