force-app/main/default/objects/SAC_Alerta__c/listViews/SAC_PendientesDeMisGruposReclamacion.listView-meta.xml
<ListView>
    <fullName>SAC_PendientesDeMisGruposReclamacion</fullName>
    <columns>CREATED_DATE</columns>
    <columns>SAC_Reclamacion__c</columns>
    <columns>SAC_GrupoPropietarioReclamacion__c</columns>
    <columns>NAME</columns>
    <columns>SAC_Leido__c</columns>
    <columns>SAC_FechaLectura__c</columns>
    <columns>SAC_UsuarioLector__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAC_Leido__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>SAC_EsMiGrupoProveedor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SAC-Pendientes de mis grupos Reclamación</label>
    <sharedTo>
        <role>SAC_General</role>
    </sharedTo>
</ListView>